--- a/CRMSAPI/CRMSAPI.csproj
+++ b/CRMSAPI/CRMSAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>CRMSAPI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
